tests/errors/mismatched-shape-additive.wit
reference ./mismatched-shape-additive/extra.wit

@thing
  - kind: "widget"
  - count: 3
thing@
